# Ichika

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  dev-dependencies.txt  example.py  mkdocs.yml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  towncrier_release.toml
.github/: build-helper.py  dependabot.yml  dev-bumper.py  lint-requirements.txt
.github/scripts/: build_conclusion.py  bump_cargo_version.py  extract_version.py  gen_matrix.py
.github/t544_stub/: Cargo.toml
.github/t544_stub/src/: lib.rs  t544_sign.rs
.github/workflows/: CI.yml  build.yml  check.yml  ci.yml  deploy-docs.yml  release.yml
docs/: INDEX.nav.template  api_renderer.py  changelog.md  conf.py  gen_ref.py  index.md
docs/_templates/: api-doc-index.rst
docs/assets/: extra.css
docs/guide/: first-steps.md  index.md  login.md  message.md
docs/overrides/partials/: copyright.html
ichika-macros/: Cargo.toml
ichika-macros/src/: lib.rs
news/: +-process-request-event.added.md  +0.0.3.added.md  +async-context.fixed.md  +at-build.added.md  +audio-element.added.md  +bot-leave-event.added.md  +build-info.changed.md  +cache.changed.md  +client-send.changed.md  +client-sigs.changed.md  +dt-attr.changed.md  +element-repr.added.md  +event-type-hint.fixed.md  +event-union-dispatch.fixed.md  +fixed-badge-link.fixed.md  +fixed-typo.fixed.md  +forward-app.added.md  +forward-message.added.md  +forward-msg-build.added.md  +friend-delete-event.added.md  +gender-attr.changed.md  +get-member-list.added.md  +get-profile.added.md  +graia-binding.added.md  +group-disband-event.added.md  +group-info-update-event.md  +group-mute.added.md  +launart-component.added.md  +login-event.fixed.md  +login-proto-enum.changed.md  +member-leave-event.added.md  +member-perm-change-event.added.md  +music-share.added.md  +new-friend-event.added.md  +new-member-event.added.md  +nudge-event.added.md  +protocol.added.md  +protocol.changed.md  +qrcode-login.fixed.md  +queue-handle.changed.md  (+26 more)
pyo3-repr/: Cargo.toml
pyo3-repr/src/: lib.rs
python/ichika/: __init__.py  build_info.py  client.py  core.pyi  elements.py  event_defs.py  events.py  exceptions.py  ichika.pyi  login.py  structs.py  stubs.py  utils.py
python/ichika/core/: __init__.pyi  events.pyi
python/ichika/core/events/: __init__.pyi  structs.pyi
python/ichika/graia/: __init__.py  event.py
python/ichika/login/: __init__.py  password.py
python/ichika/login/qrcode/: __init__.py
python/ichika/login/qrcode/render/: __init__.py
python/ichika/login/qrcode_render/: dense1x2.py
python/ichika/message/: __init__.py  _sealed.py  _serializer.py  elements.py  serializer.py
python/ichika/scripts/device/: __init__.py  converter.py  data.json  generator.py
scripts/: convert_device.py
src/: build_info.rs  device.rs  exc.rs  lib.rs  login.rs  loguru.rs  selector.rs  utils.rs
src/client/: account_info.rs  cached.rs  client_impl.rs  friend.rs  friend_group.rs  friend_list.rs  group.rs  http.rs  message_receipt.rs  mod.rs  params.rs  plumbing.rs  structs.rs  utils.rs
src/events/: convert_msg.rs  converter.rs  mod.rs  structs.rs
src/login/: connector.rs  mod.rs  version.rs
src/message/: content.rs  convert.rs  elements.rs  mod.rs
