[package]
name = "ichika"
authors = ["BlueGlassBlock <blueglassblock@outlook.com>"]
version = "0.0.8"
license = "AGPL-3.0"
edition = "2021"
include = [
    "/python",
    "/src",
    "Cargo.lock",
    "pyproject.toml",
    "!__pycache__",
    "!*.so",
]

[lib]
name = "ichika"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module", "anyhow", "abi3", "abi3-py38", "multiple-pymethods", "nightly"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
ricq = { version = "0.1.20", features = ["image-detail"]}
ricq-core = "0.1"
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde_json = "1"
hex = "0.4.3"
bytes = "1"
rqrr = "0.6"
qrcode = "0.12"
image = "0.24"
async-trait = "0.1.72"
serde = "1.0"
pythonize = "0.18"
pyo3-repr = { version = "0.1.0", path = "pyo3-repr" }
once_cell = "1.18.0"
lru_time_cache = "0.11.11"
backon = "0.4.1"
t544_enc = { git = "https://github.com/LaoLittle/t544_enc" }

[patch.crates-io]
ricq = { git = "https://github.com/BlueGlassBlock/ricq.git", branch = "ichika-snapshot"}
ricq-core = { git = "https://github.com/BlueGlassBlock/ricq.git", branch = "ichika-snapshot" }

[build-dependencies]
built = { version = "0.6", features = ["chrono"] }

[profile.release]
lto = true
