[project]
name = "ichika"
requires-python = ">=3.8"
description = "基于 RICQ 的轻量级 Python QQ 自动化框架。"
readme = "README.md"
keywords = ["graia", "bot", "qq", "framework", "ricq", "ichika"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "loguru~=0.6.0",
    "graia-broadcast>=0.19.0",
    "creart-graia>=0.1.5",
    "dacite>=1.6.0",
    "graia-amnesia>=0.7.0",
    "aiohttp>=3.8.3",
]

dynamic = ["version"]

[project.optional-dependencies]
kayaku = [
    "kayaku>=0.5.0",
]


[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
py_version = 38
known_first_party = ["ichika"]
extra_standard_library = ["typing_extensions"]

[tool.pyright]
reportMissingModuleSource = false
pythonVersion = "3.8"

[tool.towncrier]
directory = "news"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "news/template.jinja"
title_format = "## [{version}](https://github.com/BlueGlassBlock/ichika/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/BlueGlassBlock/ichika/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "移除"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "弃用"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "新增"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "更改"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "修复"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "其他"
showcontent = true
