[project]
name = "ichika"
requires-python = ">=3.8"
description = "基于 RICQ 的轻量级 Python QQ 自动化框架。"
readme = "README.md"
keywords = ["graia", "bot", "qq", "framework", "ricq", "ichika"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "loguru~=0.6.0",
    "dacite>=1.6.0",
    "graia-amnesia>=0.7.0",
    "aiohttp>=3.8.3",
]

dynamic = ["version"]

[build-system]
requires = ["maturin>=0.14.16,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "ichika.core"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
py_version = 38
known_first_party = ["ichika"]
extra_standard_library = ["typing_extensions"]

[tool.pyright]
reportMissingModuleSource = false
pythonVersion = "3.8"

[tool.towncrier]
directory = "news"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "news/template.jinja"
title_format = "## [{version}](https://github.com/BlueGlassBlock/ichika/tree/{version}) - {project_date}"
issue_format = "([#{issue}](https://github.com/BlueGlassBlock/ichika/issues/{issue}))"

[[tool.towncrier.type]]
directory = "removed"
name = "移除"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "弃用"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "新增"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "更改"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "修复"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "其他"
showcontent = true

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.2.1",
]
release = [
    "towncrier>=22.12.0",
    "maturin>=0.14.16",
    "tomlkit>=0.11.6",
    "actions-toolkit>=0.1.15",
]
docs = [
    "sphinx>=6.1.3",
    "myst-parser>=1.0.0",
    "sphinxext-opengraph>=0.8.1",
    "sphinx-inline-tabs>=2022.1.2b11",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.1",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-prompt>=1.5.0",
    "sphinxcontrib-mermaid>=0.8.1",
    "sphinx-autodoc2>=0.4.2",
    "furo>=2023.3.27",
]
dev = [
    "maturin>=0.14.16",
    "pip>=23.0.1",
]
[tool.pdm.scripts]
develop.cmd = "maturin develop"
view-docs.cmd = "sphinx-autobuild docs build --watch ./docs --watch ./python --ignore ./docs/api/**"
build-docs.cmd = "sphinx-build -M html docs build -a"
